Add start page and datepicker for daily data.

--- a/main/app/templates/sidebar.html
+++ b/main/app/templates/sidebar.html
@@ -7,13 +7,16 @@
       </a>
     </li>
     <li>
-      <a href="#!/">Today</a>
+      <a href="#!/">Letzte Woche</a>
     </li>
     <li>
-      <a href="#!/realtime">Real time</a>
+      <a href="#!/day">Ein Tag</a>
     </li>
     <li>
-      <a href="#!/all">All time</a>
+      <a href="#!/realtime">Echtzeit</a>
+    </li>
+    <li>
+      <a href="#!/all">Alle Daten</a>
     </li>
   </ul>
 </nav>
