--- a/main/app/css/charts.css
+++ b/main/app/css/charts.css
@@ -3,11 +3,15 @@ text {
   font-size: 14px;
 }
 
-#chart-temperature .c3-line-temp {
-  stroke-width: 3px;
+.c3-line-temperature {
+  stroke-width: 3px!important;
   /*stroke-dasharray: 8;
   -webkit-animation: dash 1s linear infinite;
   -webkit-animation-name: temperature;*/
+}
+
+.c3-target-temperature .c3-text {
+  fill: #B65F13!important;
 }
 
 /*@keyframes temperature {
@@ -24,5 +28,5 @@ text {
 }
 
 .temperature {
-  
+
 }
