Move sidebar logic to SidebarController

--- a/main/app/templates/sidebar.html
+++ b/main/app/templates/sidebar.html
@@ -7,16 +7,16 @@
       </a>
     </li>
     <li>
-      <a href="#!/">Letzte Woche</a>
+      <a ng-click="open('/')" href="javascript:void(0)">Letzte Woche</a>
     </li>
     <li>
-      <a href="#!/day">Ein Tag</a>
+      <a ng-click="open('/day')" href="javascript:void(0)">Ein Tag</a>
     </li>
     <li>
-      <a href="#!/realtime">Echtzeit</a>
+      <a ng-click="open('/realtime')" href="javascript:void(0)">Echtzeit</a>
     </li>
     <li>
-      <a href="#!/all">Alle Daten</a>
+      <a ng-click="open('/all')" href="javascript:void(0)">Alle Daten</a>
     </li>
   </ul>
 </nav>
