--- a/main/app/templates/week.html
+++ b/main/app/templates/week.html
@@ -1,10 +1,12 @@
+
 <div class="row">
-  <div class="col-lg-offset-8 col-lg-4">
-    <div class="pull-right days-view">
+  <div class="col-lg-12">
+    <h1 class="">Letzte Woche</h1>
+    <div class="pull-right bottom-margin">
       Ansicht: &nbsp;&nbsp;
       <div class="btn-group" role="group">
-        <a ng-click="default=true" ng-class="{'active': default}" class="btn btn-default">3 Tage</a>
-        <a ng-click="default=false" ng-class="{'active': !default}" class="btn btn-default">5 Tage</a>
+        <a ng-click="default=true" ng-class="{'active': default}" class="btn btn-default">4 Tage</a>
+        <a ng-click="default=false" ng-class="{'active': !default}" class="btn btn-default">6 Tage</a>
       </div>
     </div>
   </div>
