--- a/main/app/templates/day.html
+++ b/main/app/templates/day.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="col-lg-8">
-    <div class="fade-in one">
+    <div class="fade-in">
       <chart
         chart-id="chart-temperature"
         layout="TEMPERATURE"
@@ -46,7 +46,7 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <div class="fade-in one">
+    <div class="fade-in">
     <chart
       chart-id="chart-humidity"
       layout="HUMIDITY"
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="col-lg-6">
-    <div class="fade-in one">
+    <div class="fade-in">
     <chart
       chart-id="chart-pressure"
       layout="PRESSURE"
