--- a/main/app/templates/realtime.html
+++ b/main/app/templates/realtime.html
@@ -2,8 +2,7 @@
   <div class="col-lg-12">
     <chart
       chart-id="chart-temperature"
-      layout="{{CHART_OPTIONS.TEMPERATURE}}"
-      key="temperature"
+      layout="TEMPERATURE"
       title="Temperatur"
       style="warning"
       flow="true" />
@@ -13,8 +12,7 @@
   <div class="col-lg-12">
     <chart
       chart-id="chart-humidity"
-      layout="{{CHART_OPTIONS.HUMIDITY}}"
-      key="humidity"
+      layout="HUMIDITY"
       title="Luftfeuchtigkeit"
       style="success"
       flow="true" />
@@ -24,8 +22,7 @@
   <div class="col-lg-12">
     <chart
       chart-id="chart-pressure"
-      layout="{{CHART_OPTIONS.PRESSURE}}"
-      key="pressure"
+      layout="PRESSURE"
       title="Luftdruck"
       style="primary"
       flow="true" />
