--- a/main/app/templates/week.html
+++ b/main/app/templates/week.html
@@ -23,39 +23,33 @@
         <div class="panel-heading">{{day.ts | date:'dd.MM.yyyy'}}</div>
         <div class="panel-body">
           <h2>
-            <i class="wi wi-day-sunny"></i>&nbsp;&nbsp;{{day.temperatureMax}} °C
-            <span class="min-temperature">{{day.temperatureMin}} °C</span>
+            <i class="wi wi-day-sunny"></i>&nbsp;&nbsp;{{day.temperatureMax | number:0}} °C
+            <span class="min-temperature">{{day.temperatureMin | number:0}} °C</span>
           </h2>
           <br/>
           <p>
             <strong>Regen</strong>
             <span ng-show="default">&nbsp;&nbsp;</span>
             <span ng-show="!default"></br></span>
-            {{day.rain}}%
+            {{day.rain | number:1}}%
           </p>
           <p>
             <strong>Luftdruck</strong>
             <span ng-show="default">&nbsp;&nbsp;</span>
             <span ng-show="!default"></br></span>
-            {{day.pressure}} hPa
-          </p>
-          <p>
-            <strong>Luftqualität</strong>
-            <span ng-show="default">&nbsp;&nbsp;</span>
-            <span ng-show="!default"></br></span>
-            Sehr gut
+            {{day.pressure | number:0}} hPa
           </p>
           <p>
             <strong>Sonnenstunden</strong>
             <span ng-show="default">&nbsp;&nbsp;</span>
             <span ng-show="!default"></br></span>
-            {{day.sunHours}} Std.
+            {{day.sunHours | number:0}} Std.
           </p>
           <p>
             <strong>Luftfeuchtigkeit</strong>
             <span ng-show="default">&nbsp;&nbsp;</span>
             <span ng-show="!default"></br></span>
-            {{day.humidity}}%
+            {{day.humidity | number:1}}%
           </p>
         </div>
       </div>
