--- a/main/app/templates/footer.html
+++ b/main/app/templates/footer.html
@@ -1,6 +1,6 @@
-<div class="footer">
+<div id="footer" class="footer">
   <div class="container">
     <p class="text-muted pull-right">
-      Weather App by Dominic and Felix
+      Wetter App von Dominic Pfeil and Felix Schaumann
     </p>
 </div>
