--- a/main/app/css/footer.css
+++ b/main/app/css/footer.css
@@ -4,14 +4,21 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 .footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+  height: 100px;
+  background-color: #34495e;
+}
+.footer>div {
+  position: relative;
 }
 .footer p {
-  margin-top: 20px;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  color: #fff;
 }
