--- a/main/app/templates/all.html
+++ b/main/app/templates/all.html
@@ -1,19 +1,23 @@
-<div class="row">
+<div class="row top-row">
   <div class="col-lg-12">
+    <h1 class="">Datenübersicht</h1>
+  </div>
+</div>
 
-    <div class="pull-left">
-      Ansicht: &nbsp;&nbsp;
+<div class="row top-row">
+  <div class="col-lg-6">
+    Ansicht: &nbsp;&nbsp;
       <div class="btn-group" role="group">
         <a ng-click="format='DD.MM.YYYY'" ng-class="{'active': format=='DD.MM.YYYY'}" class="btn btn-default">Tag</a>
         <a ng-click="format='MM.YYYY'" ng-class="{'active': format=='MM.YYYY'}" class="btn btn-default">Monat</a>
         <a ng-click="format='YYYY'" ng-class="{'active': format=='YYYY'}" class="btn btn-default">Jahr</a>
       </div>
-    </div>
-
+  </div>
+  <div class="col-lg-6">
     <form class="form-inline pull-right">
-      <label for="datepicker">Datum:</label>
+      <label for="datepicker">Datum:&nbsp;&nbsp;</label>
       <div class="form-group">
-        <div class='input-group date' id='datepicker'>
+        <div class="input-group date" id="datepicker">
           <input type='text' class="form-control" />
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
@@ -21,10 +25,8 @@
         </div>
       </div>
     </form>
-
   </div>
 </div>
-
 
 <div class="row">
   <div class="col-lg-12">
