--- a/main/app/templates/day.html
+++ b/main/app/templates/day.html
@@ -1,9 +1,12 @@
-<div class="row">
-  <div class='col-lg-offset-9 col-lg-3'>
+<div class="row top-row">
+  <div class="col-lg-6">
+    <h1 class="">Tagesansicht, {{day.ts | date:'dd.MM.yyyy'}}</h1>
+  </div>
+  <div class="col-lg-6 top-options">
     <form class="form-inline pull-right">
-      <label for="datepicker">Datum:</label>
+      <label for="datepicker">Datum:&nbsp;&nbsp;</label>
       <div class="form-group">
-        <div class='input-group date' id='datepicker'>
+        <div class="input-group date" id="datepicker">
           <input type='text' class="form-control" />
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
