--- a/main/app/templates/realtime.html
+++ b/main/app/templates/realtime.html
@@ -1,30 +1,20 @@
-<div class="row">
-  <div class="col-lg-12">
-    <chart
-      chart-id="chart-temperature"
-      layout="TEMPERATURE"
-      title="Temperatur"
-      style="warning"
-      flow="true" />
+<div class="row top-row">
+  <div class="col-lg-6">
+    <h1 class="">Echtzeitdaten</h1>
+  </div>
+  <div class="col-lg-6 top-options">
+    <button class="btn btn-primary pull-right space-left" ng-click="measure()" ng-disabled="disableMeasurement">Sensoren jetzt messen</button>
+    <button class="btn btn-default pull-right" ng-click="updateData()">Neueste Daten laden</button>
   </div>
 </div>
+
 <div class="row">
   <div class="col-lg-12">
     <chart
-      chart-id="chart-humidity"
-      layout="HUMIDITY"
-      title="Luftfeuchtigkeit"
-      style="success"
-      flow="true" />
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-12">
-    <chart
-      chart-id="chart-pressure"
-      layout="PRESSURE"
-      title="Luftdruck"
-      style="primary"
+      chart-id="chart-realtime"
+      layout="REALTIME"
+      title="Echtzeitdaten"
+      style="default"
       flow="true" />
   </div>
 </div>
