--- a/main/app/templates/week.html
+++ b/main/app/templates/week.html
@@ -1,7 +1,9 @@
 
-<div class="row">
-  <div class="col-lg-12">
+<div class="row top-row">
+  <div class="col-lg-6">
     <h1 class="">Letzte Woche</h1>
+  </div>
+  <div class="col-lg-6 top-options">
     <div class="pull-right bottom-margin">
       Ansicht: &nbsp;&nbsp;
       <div class="btn-group" role="group">
