--- a/main/app/css/footer.css
+++ b/main/app/css/footer.css
@@ -4,17 +4,20 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 100px;
-  background-color: #34495e;
+  background-color: #158cba;
 }
 .footer>div {
   position: relative;
+}
+.footer canvas {
+margin-bottom: -5px;  
 }
 .footer p {
   position: absolute;
